--- a/thesis.tex
+++ b/thesis.tex
@@ -100,7 +100,7 @@ Katedra Informatyki
 
 \vskip 60pt
 \begin{center}
-{\Large \bf Rafał Fronczyk, Konrad Dziedzic}\\
+{\Large \bf Konrad Dziedzic, Rafał Fronczyk}\\
 {rfronczyk@gmail.com, konraddziedzic@gmail.com}
 \end{center}
 
