--- a/0_frontmatter/abstract.tex
+++ b/0_frontmatter/abstract.tex
@@ -5,8 +5,8 @@
 %\begin{abstractslong}    %uncommenting this line, gives a different abstract heading
 \begin{abstracts}        %this creates the heading for the abstract page
 
-Put your abstract or summary here, if your university requires it.
-
+Rozwój technologiczny, a w szczególności rozwój komputerów i technologii z nimi związanych w ciągu ostatnich lat jest bardzo szybki. Zmieniają się zarówno, podzespoły, moc obliczeniowa, rozmiary, wygląd a nawet interfejsy. Komputery wkroczyły, lub są temu bardzo bliskie, do niemal każdej dziedziny życia. W związku z tym zmienia się sposób komunikacji między użytkownikiem a komputerem. W ostatnich czasach można zaobserwować dążenie inżynierów i projektantów do uczynienia komunikacji z komputerem jak najbardziej naturalną. Pomysły są różne od "kontrolerów bez kontrolera" jak Microsoft Kinect \footnote {http://www.xbox.com/en-US/kinect}, poprzez rozwiązania "ruchowe" podobne do tego na jakie zdecydowało się Sony \footnote{http://www.sony.com/} w swoim kontrolerze PlayStation Move \footnote{http://us.playstation.com/ps3/playstation-move/} poprzez klasyczne  jak mysz i klawiatura. Jednak najbardziej naturalnym sposobem porozumiewania się wydaje się głos. Najbardziej znanym, bo napewno nie pionierskim, systemem który komunikuję się z użytkownikiem za pomocą głosu jest Apple Siri \footnote{http://www.apple.com/iphone/features/siri.html} - osobisty asystent, "żyjacy" wewnątrz systemu, umożliwiający dostęp do jego funkcji za pomocą mowy.\\
+Niniejsza praca przedstawia prototyp systemu UniversalSynthesizer, służacego do zamiany tekstu na dźwięk i mowy na tekst, będącego zaawansowaną, rozproszoną, rozszerzalną, wielojęzyczną platformą/serwisem umożliwiającą łatwe tworzenie zróżnicowanych, wieloplatformowych aplikacji, mających różne zadania. Celem pracy nie było stworzenie gotowego do użytku, kompletnego, w pełni sprawnego produktu. Powstałą aplikację należy traktować bardziej jako punkt wyjścia, prototyp który w przyszłości może być wykorzystany do zbudowanie w pełni funkcjonalnego, ogólnie dostępnego, komercyjnego lub otwartego systemu. W związku z tym niektóre zagadnienia, dość istotne z punktu widzenia potencjalnego odbiorcy, ale nie będące ściśle powiązane z celem pracy zostały pominięty lub też niedopracowane. 
 \end{abstracts}
 %\end{abstractlongs}
 
