--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -3,7 +3,7 @@
 % content in this file will be fed into the main document
 
 %: ----------------------- introduction file header -----------------------
-\chapter{Introduction}
+\chapter{Wstęp}
 
 % the code below specifies where the figures are stored
 \ifpdf
@@ -28,125 +28,22 @@
 
 
 
-\section{put section name here} % section headings are printed smaller than chapter names
+\section{Definicja problemu } % section headings are printed smaller than chapter names
 % intro
-Write your text without any further commands, like this:.... Any organised system requires energy, be it a machine of some kind or a live organism. Energy is needed to win the uphill battle against entropy and pull together lifeless molecules to be able to do something in this world, like complete a PhD.
-
-
-
-\subsection{Name your subsection} % subsection headings are again smaller than section names
-% lead
-Different organised systems have different energy currencies. The machines that enable us to do science like sizzling electricity but at a controlled voltage. Earth's living beings are no different, except that they have developed another preference. They thrive on various chemicals. 
-
-% dextran, starch, glycogen
-Most organisms use polymers of glucose units for energy storage and differ only slightly in the way they link together monomers to sometimes gigantic macromolecules. Dextran of bacteria is made from long chains of $\alpha$-1,6-linked glucose units. 
-
-%: ----------------------- HELP: special characters
-% above you can see how special characters are coded; e.g. $\alpha$
-% below are the most frequently used codes:
-%$\alpha$  $\beta$  $\gamma$  $\delta$
-
-%$^{chars to be superscripted}$  OR $^x$ (for a single character)
-%$_{chars to be suberscripted}$  OR $_x$
-
-%>  $>$  greater,  <  $<$  less
-%≥  $\ge$  greater than or equal, ≤  $\ge$  lesser than or equal
-%~  $\sim$  similar to
-
-%$^{\circ}$C   ° as in degree C
-%±  \pm     plus/minus sign
-
-%$\AA$     produces  Å (Angstrom)
-
-
-
-
-% dextran, starch, glycogen continued
-Starch of plants and glycogen of animals consists of $\alpha$-1,4-glycosidic glucose polymers \cite{lastname07}. See figure \ref{largepotato} for a comparison of glucose polymer structure and chemistry. 
-
-Two references can be placed separated by a comma \cite{lastname07,name06}.
-
-%: ----------------------- HELP: references
-% References can be links to figures, tables, sections, or references.
-% For figures, tables, and text you define the target of the link with \label{XYZ}. Then you call cross-link with the command \ref{XYZ}, as above
-% Citations are bound in a very similar way with \cite{XYZ}. You store your references in a BibTex file with a programme like BibDesk.
-
-
-
-
-
-\figuremacro{largepotato}{A common glucose polymers}{The figure shows starch granules in potato cells, taken from \href{http://molecularexpressions.com/micro/gallery/burgersnfries/burgersnfries4.html}{Molecular Expressions}.}
-
-%: ----------------------- HELP: adding figures with macros
-% This template provides a very convenient way to add figures with minimal code.
-% \figuremacro{1}{2}{3}{4} calls up a series of commands formating your image.
-% 1 = name of the file without extension; PNG, JPEG is ok; GIF doesn't work
-% 2 = title of the figure AND the name of the label for cross-linking
-% 3 = caption text for the figure
-
-%: ----------------------- HELP: www links
-% You can also see above how, www links are placed
-% \href{http://www.something.net}{link text}
-
-\figuremacroW{largepotato}{Title}{Caption}{0.8}
-% variation of the above macro with a width setting
-% \figuremacroW{1}{2}{3}{4}
-% 1-3 as above
-% 4 = size relative to text width which is 1; use this to reduce figures
-
-
-
-
-Insulin stimulates the following processes:
-
-\begin{itemize}
-\item muscle and fat cells remove glucose from the blood,
-\item cells breakdown glucose via glycolysis and the citrate cycle, storing its energy in the form of ATP,
-\item liver and muscle store glucose as glycogen as a short-term energy reserve,
-\item adipose tissue stores glucose as fat for long-term energy reserve, and
-\item cells use glucose for protein synthesis.
-\end{itemize}
-
-%: ----------------------- HELP: lists
-% This is how you generate lists in LaTeX.
-% If you replace {itemize} by {enumerate} you get a numbered list.
-
-
+Komputerowe przetwarzanie mowy jest w ostatnim czasie szybko rozwijającą się dziedziną w przemyśle informatycznym. Wykorzystuje się je w wielu różnych dziedzinach zarówno związanych z rozrywką ( rozmainte gry polegające na jak najwierniejszym zaśpiewaniu podanego utworu), z życiem codziennym (Apple Siri czyi wirtualny asystent) jak i z pracą(różne systemy telefoniczne działające bez udziału człowieka). W wielu sytuacjach wykorzystanie komputerowo generowanej mowy jest niezastąpione.\\
+Podobnie sytuacja wygląda z wykorzystaniem architektury SOA. Jest to jedno z najważniejszych osiągnieć informatycznych ostatnich lat. Podejście to zdecydowanie dominuje w obecnie projektowanych architekturach. Jednym z głowych powodów takiego stanu rzeczy jest uproszczenie modelu współczesnych dużych aplikacji. Umożliwia ono podzielenie systemu na serwisy które są niezależnymi, samodzielnymi, łatwymi w zarządzaniu, posiadającymi jasno i jednoznacznie zdefiniowane interfejsy encjami, które można wykorzystać w różnej kolejności w celu otrzymania różnych efektów. \\
+Celem tej pracy jest zbadanie możliwości wykorzystania nowoczesnej i prężnie rozwijającej się architektury do stworzenia gotowego systemy ułatwiającego i ujednolicającego proces tworzenia aplikacji przetwarzających mowę.
  
 
 
-%: ----------------------- HELP: tables
-% Directly coding tables in latex is tiresome. See below.
-% I would recommend using a converter macro that allows you to make the table in Excel and convert them into latex code which you can then paste into your doc.
-% This is the link: http://www.softpedia.com/get/Office-tools/Other-Office-Tools/Excel2Latex.shtml
-% It's a Excel template file containing a macro for the conversion.
-
-\begin{table}[htdp]
-\centering
-\begin{tabular}{ccc} % ccc means 3 columns, all centered; alternatives are l, r
-
-{\bf Gene} & {\bf GeneID} & {\bf Length} \\ 
-% & denotes the end of a cell/column, \\ changes to next table row
-\hline % draws a line under the column headers
-
-human latexin & 1234 & 14.9 kbps \\
-mouse latexin & 2345 & 10.1 kbps \\
-rat latexin   & 3456 & 9.6 kbps \\
-% Watch out. Every line must have 3 columns = 2x &. 
-% Otherwise you will get an error.
-
-\end{tabular}
-\caption[title of table]{\textbf{title of table} - Overview of latexin genes.}
-% You only need to write the title twice if you don't want it to appear in bold in the list of tables.
-\label{latexin_genes} % label for cross-links with \ref{latexin_genes}
-\end{table}
-
-
-
-% There you go. You already know the most important things.
-
-
-% ----------------------------------------------------------------------
-
+\subsection{Obszar badań} % subsection headings are again smaller than section names
+W skład zakresu pracy wchodzą zarówno technologie związane z architekturą SOA jak i z przetwarzaniem mowy. W celu użycia odpowiednich narzędzi przeprowadzono wiele badań i testów w czasie których dużą wagę przykładano do:
+\begin{itemize}
+ 	\item możliwości konfiguracyjnych
+	\item wydajności
+	\item łatwości rozbudowy
+	\item dostępnej dokumentacjji i pomocy technicznej
+\end{itemize}
+W efekcie przeprowadzonych czynności okazało się, że najlepsze efekty uzyskać można korzystając z szyny ESB  Apache ServiceMix,  syntezatorów mowy Ivona i FreeTTS oraz innych mniej istotnych narzędzi potrzebnych do stworzenia architektury zgodnej z SOA oraz zdolnej do efektywnego wykonywania postawionych przed nią zadań. 
 
 
