wymagania funkcjonalne czesc I

--- a/thesis.tex
+++ b/thesis.tex
@@ -165,7 +165,7 @@ Kraków, 2012
 \include{1_introduction/introduction}	% background information
 \include{2/aims}						% aims of the project
 
-\include{3/XYZ}			
+\include{3/wymagania}			
 \include{4/XYZ}	
 \include{5/XYZ}
 \include{6/XYZ}
