Fixed order of email addresses.

--- a/thesis.tex
+++ b/thesis.tex
@@ -101,7 +101,7 @@ Katedra Informatyki
 \vskip 60pt
 \begin{center}
 {\Large \bf Konrad Dziedzic, Rafał Fronczyk}\\
-{rfronczyk@gmail.com, konraddziedzic@gmail.com}
+{konraddziedzic@gmail.com, rfronczyk@gmail.com}
 \end{center}
 
 \vskip 50pt
