--- a/thesis.tex
+++ b/thesis.tex
@@ -163,7 +163,7 @@ Kraków, 2012
 % But take care that the paths match. You can also change the order of appearance by moving the include commands.
 
 \include{1_introduction/introduction}	% background information
-\include{2/aims}						% aims of the project
+\include{2/technologie}						% aims of the project
 
 \include{3/wymagania}						
 \include{4/problem_analysis}	
