--- a/3/wymagania.tex
+++ b/3/wymagania.tex
@@ -66,11 +66,11 @@ Jest to aplikacja webowa, które głównym celem jest odczytywanie użytkownikow
 			\item francuski
 		\end{enumerate}
 	\item Automatyczne sprawdzanie czy któreś ze źródeł nie zawiera nowej wiadomości
-	\item Możliwość ustawienia odstępów czasowych pomędzy sprawdzaniem przez system źródeł
+	\item Możliwość ustawienia odstępów czasowych pomiędzy sprawdzaniem przez system źródeł
 	\item Automatyczne Odczytanie użytkownikowi nowych wiadomości (w przypadku istnienia) 
 \end{enumerate}  
 \subsection{LektorsSMS}
-Jest to aplikacja przeznaczona dla systemu operacyjnego Android. Jak nazwa wskazuje służy ona do automatycznego odczytywania wiadomości SMS zaraz po ich otrzymaniu. Jest bardzo przydatna w czasie jazdy samochodem, wiadomo, że używanie telefonu komórkowego jest zabronione z powodu bezpieczeństwa, tym bardziej własnoręczne odczytywanie wiadomości tekstowych jeszcze w większym stopniu niż rozmowa przez telefon prowadzi do odwrócenia uwagi kierowcy od sytuacji na drodze. Istnienie i użyteczność tej aplikacji pokazuje, że stworzony na potrzeby tej pracy serwis UniversalSynthesizer jest bardzo użyteczny, aplikacje mogące z niego korzystać mogą być tworzone na różne platformy.
+Jest to aplikacja przeznaczona dla systemu operacyjnego Android. Jak nazwa wskazuje służy ona do automatycznego odczytywania wiadomości SMS zaraz po ich otrzymaniu. Jest bardzo przydatna w czasie jazdy samochodem, wiadomo, że używanie telefonu komórkowego jest zabronione z powodu bezpieczeństwa, tym bardziej, używanie rąk i skupianie wzrodku na odczytywanej wiadomości tekstowej jeszcze w większym stopniu niż rozmowa przez telefon prowadzi do odwrócenia uwagi kierowcy od sytuacji na drodze. Istnienie i użyteczność tej aplikacji pokazuje, że stworzony na potrzeby tej pracy serwis UniversalSynthesizer jest bardzo użyteczny, aplikacje mogące z niego korzystać mogą być tworzone na różne platformy.
 \newpage
 \subsubsection{Przypadki użycia}
 \begin{figure}[!h]
