--- a/thesis.tex
+++ b/thesis.tex
@@ -167,7 +167,7 @@ Kraków, 2012
 
 \include{3/wymagania}						
 \include{4/problem_analysis}	
-\include{5/XYZ}
+\include{5/projects_implementations}
 \include{6/XYZ}
 
 \include{7/discussion}               % discussion of results
